Genericons no longer stuck at 16px

--- a/app/assets/scss/framework/genericons/genericons/_genericons.scss
+++ b/app/assets/scss/framework/genericons/genericons/_genericons.scss
@@ -187,7 +187,7 @@ $genericons: (
 );
 
 %genericon {
-	font-size: 16px;
+	// font-size: 16px;
 	vertical-align: top;
 	text-align: center;
 	-moz-transition: color .1s ease-in 0;
